# Class-Widgets-2

./: .gitignore  README.md  README_CN.md  README_zh.md  pyproject.toml  requirements.txt
.github/DISCUSSION_TEMPLATE/: Feature.yaml
.github/ISSUE_TEMPLATE/: BugReport.yml
.github/workflows/: build&release.yml
assets/locales/: en_US.ts  it.ts  ja_JP.ts  lzh.qm  lzh.ts  ta.qm  ta.ts  zh_CN.qm  zh_CN.ts  zh_HK.ts  zh_SIMPLIFIED.qm  zh_SIMPLIFIED.ts
configs/: configs.json
configs/schedules/: New Schedule 1.json
scripts/: test_qml_import.py  update_ts.ps1
src/: __init__.py  app.py
src/core/: central.py
src/core/automations/: builtin_tasks.py
src/core/config/: manager.py  model.py
src/core/notification/: service.py
src/core/plugin/: api.py  components.py  loader.py  manager.py
src/core/schedule/: editor.py  manager.py  runtime.py  service.py  swapper.py
src/core/themes/: manager.py
src/core/utils/: __init__.py  backend.py  subjects.py  translator.py
src/core/widgets/: core.py
src/core/windows/: windows.py
src/plugins/cw_widgets/: widgets.py
src/qml/: MainInterface.qml
src/qml/ClassWidgets/Components/: qmldir
src/qml/ClassWidgets/Components/dialogs/: ClassSwapDialog.qml
src/qml/ClassWidgets/Components/oobe/: OobeFinishPage.qml  OobeGeneralPage.qml  OobeInteractionsPage.qml  OobeLanguagePage.qml  OobePersonalizationPage.qml  OobeSubjectsPage.qml  OobeWidgetsPage.qml
src/qml/ClassWidgets/Windows/: Editor.qml  Tutorial.qml
src/qml/ClassWidgets/components/: WidgetsContainer.qml
src/qml/ClassWidgets/pages/editor/: Home.qml  (+3 more)
(+11 files in other folders)
