# 项目信息
[project]
name = "Class-Widgets-2"
version = "2.0.1"
#这边补充一下
authors = [
  { name="RinLit", email="rinlit@rinlit.rinlit" }
]
description = "Class Widgets™ 2"
readme = "README.md"
homepage = "https://github.com/RinLit/Class-Widgets-2"
license = { file="LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

# 依赖配置
requires-python = ">=3.12"
dependencies = [
  "PySide6",
  "RinUI",
  "loguru",
]

# 可选依赖
[project.optional-dependencies]
# 开发工具
dev = [

]
